Kubernetes_Deployments_files/Application_files/appdeploy.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "56"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"servicedx-ui","env":"qa","release":"1.0.0"},"name":"servicedx-ui","namespace":"sdx-qa"},"spec":{"replicas":5,"selector":{"matchLabels":{"app":"servicedx-ui","env":"qa","release":"1.0.0"}},"strategy":{"rollingUpdate":{"maxSurge":"50%","maxUnavailable":"50%"},"type":"RollingUpdate"},"template":{"metadata":{"labels":{"app":"servicedx-ui","env":"qa","release":"1.0.0"}},"spec":{"containers":[{"image":"23 [...]
    creationTimestamp: "2023-01-13T04:19:13Z"
    generation: 61
    labels:
      app: service-ui
      env: dev
      release: 1.0.0
    name: service-ui
    namespace: atc-dev
    resourceVersion: "1259050567"
    uid: 01f1a8e8-31be-4a03-acb2-d631d52e24ad
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: service-ui
        env: dev
        release: 1.0.0
    strategy:
      rollingUpdate:
        maxSurge: 50%
        maxUnavailable: 50%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          date: "1680715177"
        creationTimestamp: null
        labels:
          app: service-ui
          env: dev
          release: 1.0.0
      spec:
        containers:
        - image: rajeswarym/custom-nginx:latest
          imagePullPolicy: Always
          name: service-ui
          ports:
          - containerPort: 80
            protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 50Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        nodeSelector:
          env: prod
          platform: monitor
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        tolerations:
        - effect: NoSchedule
          key: platform
          operator: Equal
          value: monitor
        - effect: NoSchedule
          key: env
          operator: Equal
          value: prod
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2023-01-13T09:24:56Z"
      lastUpdateTime: "2024-08-23T09:30:10Z"
      message: ReplicaSet "servicedx-ui-b9f787b49" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2024-08-28T11:44:49Z"
      lastUpdateTime: "2024-08-28T11:44:49Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 61
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
